apps/nerdd-frontend/envs/local/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: nerdd-gateway
      namespace: nginx-gateway
  hostnames:
    - localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: nerdd-frontend
          port: 80
          weight: 1
